--- a/env.cfg
+++ b/env.cfg
@@ -2,6 +2,8 @@
 
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 
+
+
 if [[ ${CENTOS_RELEASE} == 7 ]]; then
     echo "CENTOS 7 not purging modules"
 	
@@ -13,8 +15,10 @@ else
 	module load modules modules-init modules-gs/prod modules-eichler
 	
 	# centos 6 only modules 
+	# java 8 must be loaded before pilon
 	module load ucsc/20160823
 	module load bwakit/0.7.15
+	module load java/8u25
 	module load pilon/1.22
 fi
 
@@ -27,7 +31,6 @@ module load pbconda/201911
 module load bedtools/2.27.1
 module load seqtk/1.3
 module load whatshap/0.18
-module load java/8u25
-module load canu/1.7.1
+module load canu/1.9_hc
 module load racon/1.4.3
 
