--- a/env.cfg
+++ b/env.cfg
@@ -1,33 +1,34 @@
 #!/bin/bash
 
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+module purge
+### Setup modules ###
+. /etc/profile.d/modules.sh
+if test ! -z $MODULESHOME; then
+    module load modules modules-init modules-gs/prod modules-eichler/prod
+fi
 
-if [[ ${CENTOS_RELEASE} == 7 ]]; then
-    echo "CENTOS 7 not purging modules"
+
 	
+if [[ ${CENTOS_RELEASE} == 7 ]]; then
 	# centos 7 only modules 
 	module load bwa/0.7.15
 else
-	module purge
-	. /etc/profile.d/modules.sh
-	module load modules modules-init modules-gs/prod modules-eichler
-	
 	# centos 6 only modules 
 	module load ucsc/20160823
 	module load bwakit/0.7.15
+	module load java/8u25
 	module load pilon/1.22
 fi
 
 
 # bwa must load before samtools toolkit
-module load samtools/1.9
+module load gcc/8.1.0
+module load samtools/1.10
 module load miniconda/4.5.12
 module load minimap2/2.17
 module load pbconda/201911
 module load bedtools/2.27.1
 module load seqtk/1.3
-module load whatshap/0.18
-module load java/8u25
-module load canu/1.7.1
-module load racon/1.4.3
+module load canu/1.9_hc
 
