--- a/env.cfg
+++ b/env.cfg
@@ -30,5 +30,5 @@ module load minimap2/2.17
 module load pbconda/201911
 module load bedtools/2.27.1
 module load seqtk/1.3
-module load canu/1.9_hc
+module load canu/2.0
 
