--- a/env.cfg
+++ b/env.cfg
@@ -17,4 +17,5 @@ module load pbconda/201911
 module load bedtools/2.27.1
 module load seqtk/1.3
 module load canu/2.0
+module load hifiasm/0.7 yak/0.1
 
